lib/04data_structure/ringbuffer/ringbuffer.h

typedef struct RingBuffer RingBuffer;
struct RingBuffer {
	Deque data;
	usize cap;
};
/*
 * RingBuffer is an overwrite queue: when full, push drops the oldest
 * element before appending the new value.
 */
void ring_buffer_drop(void *self);
IMPL_SHY_OWNED_RESULT(RingBuffer, ring_buffer_drop, ring_buffer_clone_obj)

ResultRingBuffer ring_buffer_new(usize capacity, TypeDesc elem);
i32 ring_buffer_push_raw(RingBuffer *buffer, const void *value);
i32 ring_buffer_pop(RingBuffer *buffer, void *out);
const void *ring_buffer_front(const RingBuffer *buffer);
void *ring_buffer_front_mut(RingBuffer *buffer);
const void *ring_buffer_back(const RingBuffer *buffer);
void *ring_buffer_back_mut(RingBuffer *buffer);
void ring_buffer_clear(RingBuffer *buffer);