lib/04data_structure/ringbuffer/lib.rs

//generated by gpt-5<noreply@openai.com> @ codex
#![no_std]

use core::ffi::c_void;
use core::marker::PhantomData;
use core::mem::{align_of, size_of, ManuallyDrop, MaybeUninit};
use core::ptr;
use shyos_deque::RawDeque;
use shyos_obj::TypeDesc;
use shyos_result::{CResult, ERROR_INVALID_ARGUMENT, ERROR_NO_VALUE, ERROR_OUT_OF_MEMORY};

#[repr(C)]
pub struct RawRingBuffer {
    pub data: RawDeque,
    pub cap: usize,
}

unsafe extern "C" {
    #[link_name = "ring_buffer_new"]
    fn c_ring_buffer_new(capacity: usize, elem: TypeDesc) -> CResult<RawRingBuffer>;
    #[link_name = "ring_buffer_push_raw"]
    fn c_ring_buffer_push_raw(buffer: *mut RawRingBuffer, value: *const c_void) -> i32;
    #[link_name = "ring_buffer_pop"]
    fn c_ring_buffer_pop(buffer: *mut RawRingBuffer, out: *mut c_void) -> i32;
    #[link_name = "ring_buffer_front"]
    fn c_ring_buffer_front(buffer: *const RawRingBuffer) -> *const c_void;
    #[link_name = "ring_buffer_front_mut"]
    fn c_ring_buffer_front_mut(buffer: *mut RawRingBuffer) -> *mut c_void;
    #[link_name = "ring_buffer_back"]
    fn c_ring_buffer_back(buffer: *const RawRingBuffer) -> *const c_void;
    #[link_name = "ring_buffer_back_mut"]
    fn c_ring_buffer_back_mut(buffer: *mut RawRingBuffer) -> *mut c_void;
    #[link_name = "ring_buffer_clear"]
    fn c_ring_buffer_clear(buffer: *mut RawRingBuffer);
    #[link_name = "ring_buffer_drop"]
    fn c_ring_buffer_drop(buffer: *mut RawRingBuffer);
}

unsafe extern "C" fn drop_element<T>(value: *mut c_void) {
    unsafe { ptr::drop_in_place(value.cast::<T>()) }
}

fn type_desc<T>() -> TypeDesc {
    TypeDesc {
        size: size_of::<T>(),
        drop: Some(drop_element::<T>),
        clone: None,
    }
}

#[repr(transparent)]
pub struct CRingBuffer<T> {
    raw: RawRingBuffer,
    marker: PhantomData<T>,
}

unsafe impl<T: Send> Send for CRingBuffer<T> {}
unsafe impl<T: Sync> Sync for CRingBuffer<T> {}

impl<T> CRingBuffer<T> {
    pub fn new(capacity: usize) -> CResult<Self> {
        if capacity == 0 || size_of::<T>() == 0 || align_of::<T>() > align_of::<usize>() {
            return CResult::err(ERROR_INVALID_ARGUMENT);
        }
        match unsafe { c_ring_buffer_new(capacity, type_desc::<T>()) } {
            CResult::Ok(raw) => CResult::ok(Self {
                raw,
                marker: PhantomData,
            }),
            CResult::Err(error) => CResult::err(error),
        }
    }

    pub fn len(&self) -> usize {
        self.raw.data.len
    }

    pub fn capacity(&self) -> usize {
        self.raw.cap
    }

    pub fn is_empty(&self) -> bool {
        self.len() == 0
    }

    pub fn is_full(&self) -> bool {
        self.len() == self.capacity()
    }

    /// Pushes a value, dropping the oldest value when the buffer is full.
    pub fn push(&mut self, value: T) -> CResult<()> {
        let value = ManuallyDrop::new(value);
        let status = unsafe {
            c_ring_buffer_push_raw(&mut self.raw, (&*value as *const T).cast::<c_void>())
        };
        if status == 0 {
            CResult::ok(())
        } else {
            drop(ManuallyDrop::into_inner(value));
            CResult::err(ERROR_OUT_OF_MEMORY)
        }
    }

    pub fn pop(&mut self) -> CResult<T> {
        let mut value = MaybeUninit::<T>::uninit();
        if unsafe { c_ring_buffer_pop(&mut self.raw, value.as_mut_ptr().cast()) } == 0 {
            CResult::ok(unsafe { value.assume_init() })
        } else {
            CResult::err(ERROR_NO_VALUE)
        }
    }

    pub fn front(&self) -> Option<&T> {
        unsafe { c_ring_buffer_front(&self.raw).cast::<T>().as_ref() }
    }

    pub fn front_mut(&mut self) -> Option<&mut T> {
        unsafe { c_ring_buffer_front_mut(&mut self.raw).cast::<T>().as_mut() }
    }

    pub fn back(&self) -> Option<&T> {
        unsafe { c_ring_buffer_back(&self.raw).cast::<T>().as_ref() }
    }

    pub fn back_mut(&mut self) -> Option<&mut T> {
        unsafe { c_ring_buffer_back_mut(&mut self.raw).cast::<T>().as_mut() }
    }

    pub fn clear(&mut self) {
        unsafe { c_ring_buffer_clear(&mut self.raw) }
    }
}

impl<T: Clone> Clone for CRingBuffer<T> {
    fn clone(&self) -> Self {
        let mut clone = Self::new(self.capacity()).unwrap();
        for index in 0..self.len() {
            let value = unsafe {
                shyos_deque::deque_get_raw(&self.raw.data, index)
                    .cast::<T>()
                    .as_ref()
                    .unwrap()
            };
            clone.push(value.clone()).unwrap();
        }
        clone
    }
}

impl<T> Drop for CRingBuffer<T> {
    fn drop(&mut self) {
        unsafe { c_ring_buffer_drop(&mut self.raw) }
    }
}
